# gabion

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  POLICY_SEED.md  README.md  gabion.toml  glossary.md  lint.sarif  pyproject.toml  pytest.ini
.github/: pull_request_template.md
baselines/: ambiguity_baseline.json  branchless_policy_baseline.json  dataflow_baseline.txt  defensive_fallback_policy_baseline.json  no_monkeypatch_policy_baseline.json  runtime_narrowing_boundary_policy_baseline.json  test_annotation_drift_baseline.json  test_obsolescence_baseline.json  type_contract_debt_baseline.json  typing_surface_policy_baseline.json
docs/: allowed_actions.txt  architecture_zones.md  aspf_execution_fibration.md  aspf_fingerprint_contract.md  aspf_opportunity_rules.yaml  aspf_taint_isomorphism_map.yaml  aspf_taint_isomorphism_no_change.yaml  baseline_zero_single_owner.md  clause_obligation_decks.yaml  codex_repo_walkthrough.md  command_orchestrator_stage_boundaries.md  compatibility_layer_debt_register.md  compliance_render.md  consolidation_audit.md  coverage_semantics.md  dataflow_legacy_monolith_symbol_migration_index.md  deadline_system.md  decision_flow_tiers.md  docflow_strict_failure_analysis.md  doer_judge_witness.md  enforceable_rules_catalog.yaml  enforceable_rules_cheat_sheet.md  event_algebra_bridge_matrix.md  event_algebra_debt_rebase_map.md  frontmatter_yaml_migration_ledger.md  generated_artifact_manifest.md  generated_artifact_manifest.yaml  governance_control_loops.md  governance_control_loops.yaml  governance_loop_matrix.md  governance_rules.yaml  identity_debt_rebase_map.md  identity_interning_bridge.md  identity_substrate_bridge_matrix.md  identity_zone_grammar.md  influence_index.md  invariants_system_design.md  (+27 more)
(+1747 files in other folders)
