[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gabion"
version = "0.1.0"
description = "Architectural linter that stabilizes loose parameters into structural bundles."
dependencies = [
    "pygls>=1.3",
    "libcst>=1.1",
    "pydantic>=2.5",
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
gabion = "gabion.cli:app"
gabion-ls = "gabion.server:start"
